// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error page 1`] = `<ArticleListPageError />`;

exports[`2. a loading state 1`] = `
<authorArticlesWithImagesProvider>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        isLoading={true}
        jobTitle=""
        name=""
        twitter=""
        uri=""
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={0}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.25}
    isLoading={true}
    page={1}
    pageSize={10}
    showImages={true}
  />
</authorArticlesWithImagesProvider>
`;

exports[`3. an article list with images 1`] = `
<authorArticlesWithImagesProvider>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri="https://image.io"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.25}
    isLoading={false}
    page={2}
    pageSize={10}
    showImages={true}
  />
</authorArticlesWithImagesProvider>
`;

exports[`4. an article list without images 1`] = `
<authorArticlesNoImagesProvider>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri=""
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.5}
    isLoading={false}
    page={1}
    pageSize={12}
    showImages={false}
  />
</authorArticlesNoImagesProvider>
`;

exports[`5. fetches more articles 1`] = `
<authorArticlesWithImagesProvider>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri="https://image.io"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
        Object {
          "headline": "Headline 3",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40h",
          "url": "https://article3.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.25}
    isLoading={false}
    page={2}
    pageSize={10}
    showImages={true}
  />
</authorArticlesWithImagesProvider>
`;

exports[`6. fetches more articles and falls back to previous data if no more 1`] = `
<authorArticlesNoImagesProvider>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri="https://image.io"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.5}
    isLoading={false}
    page={2}
    pageSize={10}
    showImages={false}
  />
</authorArticlesNoImagesProvider>
`;

exports[`7. an article list header 1`] = `
<header
  role="banner"
>
  <div>
    <div>
      <div>
        <Image
          aspectRatio={1}
          uri="https://image.io"
        />
      </div>
      <h1
        aria-level="1"
        role="heading"
      >
        Name
      </h1>
      <h2
        aria-level="2"
        role="heading"
      >
        job title
      </h2>
      <div>
        <div>
          <IconTwitter
            height={15}
            width={15}
          />
        </div>
        <TextLink
          testID="twitterLink"
          url="https://twitter.com/twitter"
        >
          @
          twitter
        </TextLink>
      </div>
      <div>
        <div>
          Camilla Long
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`8. an article list header with no bio, job title, name or twitter 1`] = `
<header
  role="banner"
>
  <div>
    <div>
      <div>
        <Image
          aspectRatio={1}
          uri="https://image.io"
        />
      </div>
    </div>
  </div>
</header>
`;

exports[`9. an article list header loading 1`] = `
<header
  role="banner"
>
  <div>
    <div>
      <Gradient />
    </div>
  </div>
</header>
`;

exports[`10. an article list header only changes on loading state change 1`] = `
<header
  role="banner"
>
  <div>
    <div>
      <Gradient />
    </div>
  </div>
</header>
`;

exports[`10. an article list header only changes on loading state change 2`] = `
<header
  role="banner"
>
  <div>
    <div>
      <h2
        aria-level="2"
        role="heading"
      >
        title 1
      </h2>
    </div>
  </div>
</header>
`;

exports[`10. an article list header only changes on loading state change 3`] = `
<header
  role="banner"
>
  <div>
    <div>
      <h2
        aria-level="2"
        role="heading"
      >
        title 1
      </h2>
    </div>
  </div>
</header>
`;
